middle/eureka/eureka-statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: yidian-prod
  name: register-server
  labels:
    service: register-server
spec:
  replicas: 3
  serviceName: register-server
  selector:
    matchLabels:
      service: register-server
  template:
    metadata:
      labels:
        service: register-server
      annotations:
        service: register-server
    spec:
      containers:
        - name: register-server
          image: harbor.int.yidian-inc.com/eureka/eureka
          imagePullPolicy: Always
          ports:
          - name: http
            containerPort: 8000
            protocol: TCP
          resources:
            requests:
              cpu: "1"
              memory: "500Mi"
            limits:
              cpu: "2"
              memory: "4Gi"
          livenessProbe:
            tcpSocket:
              port: 8000
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8001
              scheme: HTTP
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
